Bug 973105 - Force flushing of repaint requests before processing touchstart events. r=botond